--- a/ohm-contrib.gemspec.erb
+++ b/ohm-contrib.gemspec.erb
@@ -2,8 +2,8 @@
 Gem::Specification.new do |s|
   s.name = 'ohm-contrib'
   s.version = "<%= Ohm::Contrib::VERSION %>"
-  s.summary = %{A collection of decoupled drop-in modules for Ohm}
-  s.date = %q{2010-05-12}
+  s.summary = %{A collection of decoupled drop-in modules for Ohm.}
+  s.description = %{Includes a couple of core functions such as callbacks, timestamping, typecasting and lots of generic validation routines.}
   s.author = "Cyril David"
   s.email = "cyx.ucron@gmail.com"
   s.homepage = "http://github.com/cyx/ohm-contrib"
